blueprints/kratos/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kratos
spec:
  hostnames:
    - auth-server.developer-friendly.blog
    - kratos-admin.developer-friendly.blog
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: global
      namespace: cert-manager
      sectionName: http
  rules:
    - backendRefs:
        - kind: Service
          name: kratos-public
          port: 80
      filters:
        - responseHeaderModifier:
            set:
              - name: Strict-Transport-Security
                value: max-age=31536000; includeSubDomains; preload
          type: ResponseHeaderModifier
      matches:
        - headers:
            - name: host
              value: auth-server.developer-friendly.blog
              type: Exact
          path:
            type: PathPrefix
            value: /
    - backendRefs:
        - kind: Service
          name: oathkeeper-proxy
          port: 80
      filters:
        - responseHeaderModifier:
            set:
              - name: Strict-Transport-Security
                value: max-age=31536000; includeSubDomains; preload
          type: ResponseHeaderModifier
      matches:
        - headers:
            - name: host
              value: kratos-admin.developer-friendly.blog
              type: Exact
          path:
            type: PathPrefix
            value: /
